--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "stone-games"
 main = ".next/worker.js"
 compatibility_date = "2023-05-18"
+pages_build_output_dir = ".next"
 
 [build]
 command = "npm run build"
