--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,22 +1,10 @@
 name = "stone-games"
-main = ".next/worker.js"
-compatibility_date = "2023-05-18"
 pages_build_output_dir = ".next"
-
-[build]
-command = "npm run build"
-cwd = "."
-watch_dir = "src"
-
-[build.upload]
-format = "service-worker"
-
-[site]
-bucket = ".next"
+compatibility_date = "2023-05-18"
 
 [env.production]
 workers_dev = false
 route = "aistone.org/*"
 
-[env.development]
+[env.preview]
 workers_dev = true 
