--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,11 @@
 name = "stone-games"
 compatibility_date = "2023-05-18"
-pages_build_output_dir = ".next" 
+pages_build_output_dir = "dist"
+
+[build]
+command = "npm run build"
+output_directory = "dist"
+base_directory = "."
+
+[build.environment]
+NODE_VERSION = "20" 
