--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,8 @@
 name = "stone-games"
 compatibility_date = "2023-05-18"
 pages_build_output_dir = "dist"
+route = "*/*"
+site.bucket = "./dist"
 
 [build]
 command = "npm run build"
@@ -8,4 +10,12 @@ output_directory = "dist"
 base_directory = "."
 
 [build.environment]
-NODE_VERSION = "20" 
+NODE_VERSION = "20"
+
+[site]
+bucket = "./dist"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200 
