修复 tailwindcss 依赖和构建配置

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:p": "next dev -p 3005",
-    "build": "next build && cp _redirects dist/ && cp -r public/* dist/",
+    "build": "npm install tailwindcss@3.3.0 postcss@8.4.31 autoprefixer@10.4.14 && next build && cp _redirects dist/ && cp -r public/* dist/",
     "start": "next start",
     "start:p": "next start -p 3005",
     "lint": "next lint",
@@ -21,19 +21,19 @@
     "next": "^14.1.0",
     "next-i18next": "^15.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.10",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.31",
     "prisma": "^5.10.0",
-    "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
